# jira_sync

./: .coveragerc  .gitignore  .mergify.yml  README.md  config-legacy.example.toml  config.example.toml  fedora-messaging-config.example.toml  pyproject.toml  tox.ini
.github/workflows/: codebergorg_jira_usermap.toml  githubcom_jira_usermap.toml  gitlabcom_jira_usermap.toml  main.yaml  pagureio_jira_usermap.toml  sync_trackers.yml  workflow_config.toml
.s2i/: environment  run.sh
jira_sync/: __init__.py  consumer.py  jira_sync.py  jira_wrapper.py  main.py  pagure.py  sync_mgr.py  version.py
jira_sync/config/: __init__.py  legacy_model.py  main.py  model.py
jira_sync/repositories/: __init__.py  base.py  forgejo.py  github.py  gitlab.py  pagure.py
scripts/: mirror_bugzilla.py
tests/: common.py  conftest.py  test_consumer.py  test_jira_wrapper.py  test_main.py  test_pagure.py  test_sync_mgr.py  test_version.py
tests/config/: test_main.py  test_model.py
tests/fixtures/: msg_bz_mirror_add.json  msg_bz_new.json
tests/repositories/: test_base.py  test_forgejo.py  test_github.py  test_gitlab.py  test_pagure.py
