[tool.poetry]
name = "jira-sync"
version = "0.1.0"
description = ""
authors = ["Michal Konecny <mkonecny@redhat.com>"]
readme = "README.md"
packages = [{include = "jira_sync"}]

[tool.poetry.dependencies]
python = "^3.11"
jira = "^3.5.2"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
pytest = "^8.2.2"
coverage = "^7.5.3"
pytest-cov = "^5.0.0"
tomlkit = "^0.12.5"
dotwiz = "^0.4.0"
ruff = "^0.5.0"

[tool.poetry.scripts]
jira_sync = "jira_sync.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "S", "W"]
allowed-confusables = ["’"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**.py" = ["S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
