[tool.poetry]
name = "jira-sync"
version = "0.1.0"
description = ""
authors = ["Michal Konecny <mkonecny@redhat.com>"]
readme = "README.md"
packages = [{include = "jira_sync"}]

[tool.poetry.dependencies]
python = "^3.11"
jira = "^3.5.2"
click = "^8.1.7"
requests = "^2.31.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
poetry = "^2.0.0"
pytest = "^8.2.2"
coverage = "^7.5.3"
pytest-cov = "^6.0.0"
tomlkit = "^0.13.0"
dotwiz = "^0.4.0"
ruff = "^0.12.0"
mypy = "^1.10.1"
types-requests = "^2.32.0.20240622"

[tool.poetry.scripts]
jira_sync = "jira_sync.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "S", "W"]
ignore = ["S113"]
allowed-confusables = ["’"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**.py" = ["S101"]

[tool.mypy]
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
